# turtle

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/: README.md
cmake/: ucm.cmake
include/: README.md  global.hpp  lexicalize.hpp  node.hpp  syntax.hpp  token_regex.hpp  turtle.hpp
include/langs/antlr/: lexicalize.hpp
include/langs/python/: lexicalize.hpp
include/python/: lexicalize.hpp
resources/: grammer.txt
scripts/: main.py
src/: README.md  global.cpp  lexicalize.cpp  main.cpp  turtle.cpp
src/langs/antlr/: lexer.cpp  lexicalize.cpp
src/langs/python/: lexicalize.cpp
src/python/: lexicalize.cpp
